--- a/mystyle.css
+++ b/mystyle.css
@@ -5,5 +5,8 @@
 
 /* Give some border around the edges. */
 body {
-    margin-top: 60px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
