--- a/mystyle.css
+++ b/mystyle.css
@@ -4,7 +4,7 @@
 }
 
 /* Give some border around the edges. */
-body {
+container-fluid {
     margin-top: 100px;
     margin-bottom: 100px;
     margin-left: 100px;
